# coelacanth

./: .gitmodules  LICENCE.txt  Readme.md
CMake/: CoelaBuildMacros.cmake  FindMinuit2.cmake  FindRNGStreams.cmake  FindTBB.cmake  FindUNURAN.cmake  FindUnitTestpp.cmake  README.md
build_scripts/: .gitignore  CMakeLists.txt  INSTALL.sh  make_check_and_install.sh  make_clean.sh  make_dependencies.sh  setup_env_vars.sh
coela_analysis/src/: CMakeLists.txt  fitting_noise_models.h  image_noise_sim.h  minuit_psf_models.h  photometry_recipes.h  psf_characterisation.h  psf_fitting.h  psf_fitting_recipes.h  psf_generation.h  psf_models.h  regions.h  run_coela_analysis_unit_tests.cc
coela_analysis/src/implementation/: fitting_noise_models.cc  image_noise_sim.cc  minuit_psf_models.cc  photometry_recipes.cc  psf_characterisation.cc  psf_fitting.cc  psf_fitting_recipes.cc  psf_generation.cc  psf_models.cc  regions.cc
coela_analysis/src/unit_tests/: image_noise_sim_unit_tests.cc  minuit_psf_models_unit_tests.cc  psf_characterisation_unit_tests.cc  psf_fitting_recipes_unit_tests.cc  psf_generation_unit_tests.cc  region_unit_tests.cc
coela_analysis/standalone_build/: CMakeLists.txt  get_dependencies.sh  make_dependencies.sh
coela_core/src/: CMakeLists.txt  DS9Region.h  FitsHeader.h  ImageGrid.h  PixelArrayHeader.h  array_compression_info.h  cartesian_coords.h  ccd_image.h  convolution.h  drizzle.h  ds9_region.h  fits_header.h  fits_header_conventions.h  image_grid.h  image_utils.h  mosaic_image.h  pixel_array2d.h  pixel_array_header.h  pixel_array_routines.h  pixel_index.h  run_coela_core_unit_tests.cc
coela_core/src/implementation/: DS9Region.cc  FitsHeader.cc  ImageGrid.cc  PixelArrayHeader.cc  array_compression_info.cc  cartesian_coords.cc  ccd_image.cc  convolution.cc  drizzle.cc  ds9_region.cc  fits_header.cc  fits_header_conventions.cc  image_grid.cc  image_utils.cc  mosaic_image.cc  pixel_array2d.cc  pixel_array2d.icc  pixel_array_header.cc  pixel_array_routines.cc  pixel_index.cc
coela_core/src/unit_tests/: cartesian_coord_tests.cc  ccd_image_tests.cc  convolution_tests.cc  drizzle_tests.cc  ds9_region_tests.cc  fits_header_table_tests.cc  image_grid_tests.cc  image_util_tests.cc  pixel_array_header_tests.cc  pixel_array_routines_tests.cc  pixel_array_tests.cc  pixel_index_tests.cc
coela_core/standalone_build/: CMakeLists.txt  get_dependencies.sh  make_dependencies.sh  setup_env_vars.sh
coela_luckypipe/src/: CCD_dataset_info.h  CMakeLists.txt  camera_config_info.h  ccd_dataset_info.h  clean_and_register_subroutines.h  drizzle_settings.h  drizzle_subroutines.h  file_info.h  frame_info.h  frame_registration.h  gain_utils.h  image_cleanup.h  multi_CCD_filters.h  multi_ccd_filters.h  naming_conventions.h  run_coela_luckypipe_unit_tests.cc  single_CCD_filters.h  single_ccd_filters.h
coela_luckypipe/src/implementation/: CCD_dataset_info.cc  camera_config_info.cc  ccd_dataset_info.cc  clean_and_register_subroutines.cc  drizzle_settings.cc  drizzle_subroutines.cc  file_info.cc  frame_info.cc  frame_registration.cc  gain_utils.cc  image_cleanup.cc  multi_CCD_filters.cc  multi_ccd_filters.cc  single_CCD_filters.cc  single_ccd_filters.cc
coela_luckypipe/src/python_wrappers/: lucky_pipeline.cc
coela_luckypipe/src/unit_tests/: CCD_dataset_info_unit_tests.cc  camera_config_info_unit_test.cc  drizzle_settings_unit_test.cc  frame_registration_tests.cc  gain_utils_unit_tests.cc  image_cleanup_tests.cc  subroutines_unit_test.cc
coela_luckypipe/standalone_build/: CMakeLists.txt  get_dependencies.sh  make_dependencies.sh  make_standalone_lib.sh
coela_random/src/: CMakeLists.txt  boost_serialization_body_includes.h  boost_serialization_header_includes.h  emccd_model.h  random.h
coela_random/src/implementation/: emccd_model.cc  random.cc
coela_random/src/unit_tests/: boost_serialization_tests.cc  test_emccd_model.cc  test_random.cc
coela_random/standalone_build/: get_dependencies.sh  make_dependencies.sh  make_standalone_lib.sh
coela_utility/src/: CMakeLists.txt  FileBuffer.h  OrderedMap.h  file_buffer.h  file_utils.h  histogram_container.h  lucky_math_funcs.h  microstats.h  misc_math.h  ordered_map.h  simple_serialization.h  string_utils.h
coela_utility/src/implementation/: FileBuffer.cc  OrderedMap.cc  file_buffer.cc  file_utils.cc  histogram_container.cc  lucky_math_funcs.cc  misc_math.cc  ordered_map.cc  simple_serialization.cc  string_utils.cc
coela_utility/src/unit_tests/: histogram_container_tests.cc  lucky_math_unit_tests.cc  numerical_accuracy_tests.cc  ordered_map_tests.cc  simple_serialization_unit_tests.cc
coela_utility/standalone_build/: CMakeLists.txt  INSTALL.sh  get_dependencies.sh  make_dependencies.sh  make_standalone_lib.sh
examples/: CMakeLists.txt  drizzle_combine.cc  getopt_usage_example.cc
luckycam_pipeline/: CMakeLists.txt  clean_and_register.cc  dark_frame_bias_calibrator.cc  drizzle.cc  snapshot.cc
